--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body::before {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('image/LOGO FCS.jpg'); 
+    background-image: url('../image/LOGO FCS.jpg'); 
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100%; 
