--- a/css/services.css
+++ b/css/services.css
@@ -29,6 +29,8 @@ body {
     color: var(--color-dark);
     line-height: 1.6;
     background-color: var(--color-background);
+    background-image: radial-gradient(#d3e3f0 0.5px, transparent 0.5px); /* Couleur très pâle */
+    background-size: 20px 20px; /* Taille des carrés du motif */
 }
 
 h1, h2, h3 {
